saving the complete project

--- a/Smart_research_assistant/src/main/resources/application.properties
+++ b/Smart_research_assistant/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.application.name=Smart_research_assistant
 
-gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=
+gemini.api.url=${api_url}
 gemini.api.key=${GEMINI-KEY}
